deployment/k8s-config/kustomize/overlays/keel-dev/skaha/skaha-tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaha-tomcat
spec:
  template:
    spec:
      containers:
      - name: skaha-tomcat
        image: images-rc.canfar.net/skaha-system/skaha:0.9.13
        resources:
          requests:
            memory: "4Gi"
            cpu: "1"
          limits:
            memory: "8Gi"
            cpu: "5"
      serviceAccountName: skaha
      volumes:
      - name: cavern-volume
        cephfs:
          monitors:
          - 10.30.201.3:6789
          - 10.30.202.3:6789
          - 10.30.203.3:6789
          path: /volumes/_nogroup/dcd994bc-c0d4-4557-9fbf-28fc4ef5969e
          user: kanfarnetes_dev
          secretRef:
            name: cephfs-cephx-key
          readOnly: false
